# insurance-platform

./: .gitignore  DEVELOPER_COMMANDS.md
backend/: pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 08875f3e912f_expand_audit_logs_with_context_fields.py  19939965571e_convert_lead_assigned_to_to_assigned_to_.py  27737f8ea073_add_lead_workflow_fields.py  690c846b6625_add_soft_delete_to_leads.py  8889956a8990_create_leads_table.py  923bb45bab51_convert_leads_id_to_uuid_and_add_.py  9864ab4326c1_convert_users_id_to_uuid_and_add_.py  b09bab90b045_create_users_table.py  e0132b3b624c_create_users_tabler_real.py  f1912cae2297_add_audit_log_table.py
backend/app/: db.py  main.py
backend/app/core/: app_error.py  audit.py  audit_context.py  rate_limit.py  request_id.py  response.py  security.py
backend/app/models/: __init__.py  audit_log.py  lead.py  user.py
backend/app/repositories/: audit_log_repository.py  lead_repository.py  user_repository.py
backend/app/routers/: audit_logs.py  auth.py  leads.py  users.py
backend/app/schemas/: leads.py  users.py
backend/app/services/: auth_service.py  leads_service.py  users_service.py
backend/tests/: conftest.py  test_auth.py  test_flow_users_and_leads.py  test_rbac_leads.py  test_rbac_users.py
